--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0"
